--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pre-commit = "^3.0.4"
 flake8 = "^6.0.0"
 isort = "^5.12.0"
 yapf = "^0.32.0"
+scikit-learn = "^1.2.2"
 
 [tool.black]
 line-length = 119
