--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "medical-equipment-store"
+name = "Ranking-system"
 version = "0.1.0"
 description = ""
 authors = ["Nicola Ibrahim <nicolaibrahim969@gmail.com>"]
@@ -8,8 +8,7 @@ readme = "README.md"
 packages = [{include = "Ranking-system"}]
 
 [tool.poetry.dependencies]
-python = "==3.11.1"
-scipy = "^1.10.1"
+python = ">=3.8.1"
 numpy = "^1.24.2"
 pandas = "^1.5.3"
 
@@ -18,9 +17,10 @@ pandas = "^1.5.3"
 black = "^23.1.0"
 pre-commit = "^3.0.4"
 flake8 = "^6.0.0"
-isort = "^5.12.0"
 yapf = "^0.32.0"
+isort = "^5.12.0"
 scikit-learn = "^1.2.2"
+ipykernel = "^6.21.3"
 
 [tool.black]
 line-length = 119
